[gd_scene load_steps=7 format=3 uid="uid://ubyxl4osbqfu"]

[ext_resource type="Script" uid="uid://c03xjauc8fyf8" path="res://pause.gd" id="1_0piex"]
[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="2_w8uj3"]

[sub_resource type="InputEventAction" id="InputEventAction_aq7p1"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_6eyaj"]
events = [SubResource("InputEventAction_aq7p1")]

[sub_resource type="InputEventAction" id="InputEventAction_8u653"]
action = &"quit"

[sub_resource type="Shortcut" id="Shortcut_bwtow"]
events = [SubResource("InputEventAction_8u653")]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0piex")

[node name="PauseLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_w8uj3")
theme_override_font_sizes/font_size = 64
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -210.0
offset_right = 175.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_w8uj3")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_6eyaj")
text = "Resume"

[node name="ControlsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -60.0
offset_right = 175.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_w8uj3")
theme_override_font_sizes/font_size = 64
text = "Controls"

[node name="TogglesButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = 90.0
offset_right = 175.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_w8uj3")
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_w8uj3")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_bwtow")
text = "Main Menu"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="TogglesButton" to="." method="_on_toggles_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
